--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -47,7 +47,6 @@
 
 
               <h3>Disfruta de las mejores experiencias en viajes y escapadas premium con hasta 70% de descuento</h3>
-              <h4>¡Hacete miembro, aprovecha nuestras ofertas y escapate!</h4>
               <hr>
               <div style="margin-top:-16px">¿Ya sos miembro?</div>
               <a href="<%= new_user_session_path %>">
@@ -67,7 +66,6 @@
                         Datos inválidos.
                       </div>
                   <%end%>
-                  <%= f.text_field :full_name, :class => "input wide", :placeholder=>"Nombre Completo", :required => true %>
                   <%= f.email_field :email, :class => "input wide", :placeholder=>"Email", :required => true %>
                   <%= f.password_field :password, :class => "input wide", :placeholder=>"Contraseña", :required => true %>
                   <%= f.password_field :password_confirmation, :class => "input wide", :placeholder=>"Repetir Contraseña", :required => true %>
@@ -94,20 +92,19 @@
           <nav>
             <ul class="inline">
               <li><a href="<%= pages_we_path%>">Quiénes Somos</a></li>
-              <li><a href="<%= pages_work_with_us_path%>">Trabajá con Nosotros</a></li>
               <li><a href="<%= pages_terms_and_conds_path%>">Términos y Condiciones</a></li>
               <li><a href="<%= pages_faqs_path%>">Ayuda</a></li>
               <li><a href="<%= pages_contact_path%>">Contacto</a></li>
             </ul>
           </nav>
-          <p class="copyright">Copyright © 2013 Vontrip.com. Todos los derechos reservados</p>
+          <p class="copyright">Copyright © 2013 DealHunter.com. Todos los derechos reservados</p>
         </div>
 
         <div class="span3">
           <ul class="inline pull-right social">
-            <li><a href="http://www.facebook.com/vontripargentina" target="_blank"><img src="/assets/icon-fb.png"></a></li>
-            <li><a href="https://twitter.com/VonTripArg" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
-            <li><a href="https://plus.google.com/116522684361738618061" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
+            <li><a href="#" target="_blank"><img src="/assets/icon-fb.png"></a></li>
+            <li><a href="https://twitter.com/dealHunter4" target="_blank"><img src="/assets/icon-twitter.png"></a></li>
+            <li><a href="#" target="_blank"><img src="/assets/icon-gPlus.png"></a></li>
 
           </ul>
         </div>
