--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -91,10 +91,10 @@
         <div class="span9">
           <nav>
             <ul class="inline">
-              <li><a href="<%= pages_we_path%>">Quiénes Somos</a></li>
-              <li><a href="<%= pages_terms_and_conds_path%>">Términos y Condiciones</a></li>
-              <li><a href="<%= pages_faqs_path%>">Ayuda</a></li>
-              <li><a href="<%= pages_contact_path%>">Contacto</a></li>
+              <li><a href="#">Quiénes Somos</a></li>
+              <li><a href="#">Términos y Condiciones</a></li>
+              <li><a href="#">Ayuda</a></li>
+              <li><a href="#">Contacto</a></li>
             </ul>
           </nav>
           <p class="copyright">Copyright © 2013 DealHunter.com. Todos los derechos reservados</p>
