--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
     <section class="span8">
 
       <header class="out">
-        <h2>Información de Contacto</h2>
+        <h2>Información de Usuario</h2>
       </header>
 
       <%= semantic_nested_form_for [@user] do |f|%>
@@ -12,42 +12,35 @@
               <div class="span4">
                 <div class="wrapper-padding">
 
-
-                  <div class="control-group clearfix">
-                    <label class="pull-left" for="inputEmail">Nombre</label>
-                    <%=f.input :first_name, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Nombre" } %>
-                  </div>
-
-                  <%=f.inputs :for => [:client_info, f.object.client_info || ClientInfo.new] do |h|%>
+                  <%=f.inputs :for => [:client, f.object.client || Client.new] do |h|%>
 
                       <div class="control-group clearfix">
-                        <label class="pull-left" for="inputTelefono">Teléfono</label>
-                        <%=h.input :phone_number, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Teléfono" } %>
+                        <label class="pull-left" for="inputEmail">Nombre</label>
+                        <%=h.input :first_name, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Nombre" } %>
                       </div>
 
-                  <% end %>
+                      <%=h.inputs :for => [:address, h.object.address || Address.new] do |address|%>
 
-                  <%=f.inputs :for => [:address, f.object.address || Address.new] do |address|%>
+                          <div class="control-group clearfix">
+                            <label class="pull-left" for="inputDireccion">Calle</label>
+                            <%=address.input :street, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Dirección Completa", :id => "inputDireccion" } %>
+                          </div>
 
-                      <div class="control-group clearfix">
-                        <label class="pull-left" for="inputDireccion">Dirección</label>
-                        <%=address.input :street, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Dirección Completa", :id => "inputDireccion" } %>
-                      </div>
+                          <div class="control-group clearfix">
+                            <label class="pull-left" for="inputLocalidad">Piso</label>
+                            <%=address.input :floor, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Piso", :id => "inputLocalidad" } %>
+                          </div>
 
-                      <div class="control-group clearfix">
-                        <label class="pull-left" for="inputLocalidad">Piso</label>
-                        <%=address.input :floor, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Piso", :id => "inputLocalidad" } %>
-                      </div>
+                          <div class="control-group clearfix">
+                            <label class="pull-left" for="inputLocalidad">Localidad</label>
+                            <%=address.input :city, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Localidad", :id => "inputLocalidad" } %>
+                          </div>
 
-                      <div class="control-group clearfix">
-                        <label class="pull-left" for="inputLocalidad">Localidad</label>
-                        <%=address.input :city, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Localidad", :id => "inputLocalidad" } %>
-                      </div>
-
-                      <div class="control-group clearfix">
-                        <label class="pull-left" for="inputPais">País</label>
-                        <%=address.input :country, :label => false, :required => true, :as => :select, :prompt => "Seleccione País", :collection => Country.all, :input_html =>{ :style=>"width: 164px;padding-left: 50px;margin-left: 93px;"} %>
-                      </div>
+                          <div class="control-group clearfix">
+                            <label class="pull-left" for="inputPais">País</label>
+                            <%=address.input :country, :label => false, :required => true, :as => :select, :prompt => "Seleccione País", :collection => Country.all, :input_html =>{ :style=>"width: 164px;padding-left: 50px;margin-left: 93px;"} %>
+                          </div>
+                      <% end %>
                   <% end %>
 
                 </div><!--end wrapper-padding-->
@@ -56,39 +49,32 @@
               <div class="span4">
                 <div class="wrapper-padding">
 
-                  <div class="control-group clearfix">
-                    <label class="pull-left" for="inputApellido">Apellido</label>
-                    <%=f.input :last_name, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Apellido", :id => "inputApellido"} %>
-                  </div>
-                  <%=f.inputs :for => [:address, f.object.address || Address.new] do |address|%>
-                      <div class="control-group clearfix">
-                        <label class="pull-left" for="inputCP">Código Postal</label>
-                        <%=address.input :postcode, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Código Postal", :id => "inputCP"} %>
-                      </div>
-                      <div class="control-group clearfix">
-                        <label class="pull-left" for="inputProvincia">Provincia</label>
-                        <%=address.input :state, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Provincia", :id => "inputProvincia"} %>
-                      </div>
+                  <%=f.inputs :for => [:client, f.object.client || Client.new] do |h|%>
 
                       <div class="control-group clearfix">
-                        <label class="pull-left" for="inputProvincia">Número</label>
-                        <%=address.input :number, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Número", :id => "inputProvincia"} %>
+                        <label class="pull-left" for="inputApellido">Apellido</label>
+                        <%=h.input :last_name, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Apellido", :id => "inputApellido"} %>
                       </div>
 
-                  <% end %>
+                      <%=h.inputs :for => [:address, h.object.address || Address.new] do |address|%>
+                          <div class="control-group clearfix">
+                            <label class="pull-left" for="inputProvincia">Provincia</label>
+                            <%=address.input :state, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Provincia", :id => "inputProvincia"} %>
+                          </div>
+
+                          <div class="control-group clearfix">
+                            <label class="pull-left" for="inputProvincia">Número</label>
+                            <%=address.input :number, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Número", :id => "inputProvincia"} %>
+                          </div>
+
+                      <% end %>
+
+                  <%end%>
+
                   <div class="control-group clearfix">
                     <label class="pull-left" for="inputEmail">Email</label>
                     <%= f.input :email, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Email", :id => "inputEmail"} %>
                   </div>
-
-                  <%=f.inputs :for => [:client_info, f.object.client_info || ClientInfo.new] do |h|%>
-
-                      <div class="control-group clearfix">
-                        <label class="pull-left" for="inputDNI">DNI</label>
-                        <%=h.input :dni, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "DNI" } %>
-                      </div>
-
-                  <% end %>
 
                 </div><!--end wrapper-padding-->
               </div><!--end span4-->
@@ -120,19 +106,16 @@
 
         <h2>Detalle de Cuenta</h2>
         <ul class="aside-nav">
-          <li class="credit">Crédito Disponible:<span>$ <%= current_user.client.available_credit.to_i%></span></li>
-          <li><a href="<%= invitations_path%>">Invitaciones</a></li>
-          <li><a href="<%= user_path(current_user)%>">Reservas</a></li>
-          <li><a href="<%= users_gift_cards_path%>">Gift Cards</a></li>
+          <li><a href="#">Mis Ofertas</a></li>
+          <li><a href="#">Preferencias</a></li>
         </ul>
         <h2>Información Personal</h2>
         <ul class="aside-nav">
-          <li><a href="<%= edit_user_path(current_user)%>" class="active">Información de Contacto</a></li>
+          <li><a href="<%= edit_user_path(current_user)%>" class="active">Mi Perfil</a></li>
         </ul>
         <h2>Preferencias</h2>
         <ul class="aside-nav">
-          <li><a href="<%= users_newsletter_freq_path%>">Preferencias de Email</a></li>
-          <li><a href="<%= edit_user_registration_path %>">Contraseña</a></li>
+          <li><a href="#">Contraseña</a></li>
         </ul>
       </div>
     </aside><!--end sidebar-->
