--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Vontrip</title>
+  <title>DealHunter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -51,7 +51,7 @@
               <div style="margin-top:-16px">¿Ya sos miembro?</div>
               <a href="<%= new_user_session_path %>">
                 <button type="button" class="btn btn-vontrip medium" id="btn-inscribite" style="margin-left:28px; margin-top:0px;padding:6px !important;">Entrar</button>            </div>
-            </a>
+                </a>
           </div>
           <div class="span3">
             <div class="wrapper-padding">
