--- a/app/views/new_user_mailer/new_client_email.html.erb
+++ b/app/views/new_user_mailer/new_client_email.html.erb
@@ -28,7 +28,7 @@
       <!--header-->
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td valign="middle" align="center" height="100" style="background:#fff;" bgcolor="#fff"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/logo.jpg" alt="Vontrip, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.vontrip.com"></td>
+          <td valign="middle" align="center" height="100" style="background:#fff;" bgcolor="#fff"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/logo.jpg" alt="Dealhunter" width="258" height="100" longdesc="http://www.vontrip.com"></td>
         </tr>
         <tr>
           <td valign="middle" align="center" style="background:#ff4b3d; color:#fff;" bgcolor="#ff4b3d">
@@ -135,7 +135,7 @@
                 <td width="512">
                   <p style="margin:5px 0; color:#ff4b3d;">Atención al Cliente</p>
                   <h3 style="font-weight:normal; margin:0px;">0800-345-TRIP(8747)</h3>
-                  <p style="margin:0px; font-size: 12px; line-height:20px;"><a href="mailto:info@vontrip.com" style="color:#333; text-decoration:none;">info@vontrip.com</a></p>
+                  <p style="margin:0px; font-size: 12px; line-height:20px;"><a href="mailto:info@dealhunter.com" style="color:#333; text-decoration:none;">info@dealhunter.com</a></p>
                 </td>
                 <td width="88">
                   <table width="88" border="0" cellspacing="0" cellpadding="0" height="34">
