--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -19,6 +19,7 @@
       }
 
 
+
   </style>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif; margin: 0; padding: 0; background-color:#cbebfa;" marginheight="0" topmargin="0" marginwidth="0" leftmargin="0" >
@@ -28,15 +29,15 @@
       <!--header-->
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td valign="middle" align="center" height="100" style="background:#fff;" bgcolor="#fff"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/logo.jpg" alt="Vontrip, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.vontrip.com"></td>
+          <td valign="middle" align="center" height="100" style="background:#f8fdff;" bgcolor="#fff"><img src="http://dealhunterarg.herokuapp.com/assets/logo-landing.png" alt="Vontrip, Tu club privado de viajes y escapadas" width="258" height="100" longdesc="http://www.vontrip.com"></td>
         </tr>
         <tr>
-          <td valign="middle" align="center" style="background:#ff4b3d; color:#fff;" bgcolor="#ff4b3d">
+          <td valign="middle" align="center" style="background:#c1beb6; color:#fff;" bgcolor="#ff4b3d">
             <table width="600" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td height="58" width="480"><p style="letter-spacing:-0.6px; color:#fff;">Bienvenido a DealHunter</p></td>
                 <td width="120">
-                  <table width="120" border="0" cellspacing="0" cellpadding="10" style="background:#5d717d; color:#fff;" bgcolor="#5d717d">
+                  <table width="120" border="0" cellspacing="0" cellpadding="10" style="background:#899fac; color:#fff;" bgcolor="#5d717d">
                     <tr>
                       <td align="center" width="120"><a href="http://localhost:3000" style="color:#fff; font-size:12px; text-decoration:none; text-align:center;">VER OFERTAS</a></td>
                     </tr>
@@ -69,9 +70,9 @@
               <tr>
                 <td style="font-size: 14px; line-height:20px; color:#333;">
                   <p>Hola <%= @user.email%>!</p>
-                  <p>Somos <strong style="color:#ff4b3d;">Dealhunter</strong>, una nueva forma de encontrar las mejores ofertas y promociones premium de tus marcas favoritas. </p>
+                  <p>Somos <strong style="color:#3253ff;">Dealhunter</strong>, una nueva forma de encontrar las mejores ofertas y promociones premium de tus marcas favoritas. </p>
                   <p>Además, nuestro sistema es totalmente gratis, y se amolda a tu disponibilidad, asique preparate para disfrutar!.</p>
-                  <p>Con <strong style="color:#ff4b3d;">DealHunter</strong> hoy sos vos quien decide que publicidad te interesa. Se acabaron los llamados, los mensajes de texto y los correos de texto a cualquier hora. </p>
+                  <p>Con <strong style="color:#3253ff;">DealHunter</strong> hoy sos vos quien decide que publicidad te interesa. Se acabaron los llamados, los mensajes de texto y los correos de texto a cualquier hora. </p>
                   <p>Es momento de recibir ofertas y promociones verdaderas, conocer marcas nuevas y ahorrar! </p>
                   <p>Muchas gracias por suscribirte<br>
                     <strong>El equipo de DealHunter</strong></p>
@@ -86,7 +87,7 @@
         </tr>
 
         <tr>
-          <td colspan="2" valign="middle" align="center"><h2 style="color:#ff4b3d; padding:10px 0;">Encontrá las mejores ofertas<br> para vos</h2></td>
+          <td colspan="2" valign="middle" align="center"><h2 style="color:#3253ff; padding:10px 0;">Encontrá las mejores ofertas<br> para vos</h2></td>
         </tr>
       </table>
       <!--end content one-->
@@ -99,7 +100,7 @@
             <table width="600" border="0" cellspacing="0" style="padding:10px 30px 20px 30px;">
               <tr>
                 <td align="center">
-                  <table width="220" height="60" border="0" cellspacing="0" cellpadding="10" style="background:#ff4b3d; color:#fff;" bgcolor="#ff4b3d">
+                  <table width="220" height="60" border="0" cellspacing="0" cellpadding="10" style="background:#3253ff; color:#ffffff;" bgcolor="#ff4b3d">
                     <tr>
                       <td align="center"><a href="http://localhost:3000" style="color:#fff; text-decoration:none; font-size:20px; font-weight:bold;">VER OFERTAS</a></td>
                     </tr>
@@ -133,8 +134,8 @@
             <table width="600" height="110" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td width="512">
-                  <p style="margin:5px 0; color:#ff4b3d;">Atención al Cliente</p>
-                  <h3 style="font-weight:normal; margin:0px;">0800-345-DEAL(8747)</h3>
+                  <p style="margin:5px 0; color:#3253FF;">Atención al Cliente</p>
+                  <h3 style="font-weight:normal; margin:0px;">0800-345-DEAL(3325)</h3>
                   <p style="margin:0px; font-size: 12px; line-height:20px;"><a href="mailto:info@vontrip.com" style="color:#333; text-decoration:none;">info@dealhunter.com</a></p>
                 </td>
                 <td width="88">
