--- a/app/views/new_user_mailer/new_client_email.html.erb
+++ b/app/views/new_user_mailer/new_client_email.html.erb
@@ -72,7 +72,7 @@
                   <p>Hola <%= @user.email%>!</p>
                   <p>Somos <strong style="color:#3253ff;">Dealhunter</strong>, una nueva forma de encontrar las mejores ofertas y promociones premium de tus marcas favoritas. </p>
                   <p>Además, nuestro sistema es totalmente gratis, y se amolda a tu disponibilidad, asique preparate para disfrutar!.</p>
-                  <p>Con <strong style="color:#3253ff;">DealHunter</strong> hoy sos vos quien decide que publicidad te interesa. Se acabaron los llamados, los mensajes de texto y los correos de texto a cualquier hora. </p>
+                  <p>Con <strong style="color:#3253ff;">DealHunter</strong> hoy sos vos quien decide qué publicidad te interesa. Se acabaron los llamados, los mensajes de texto y los correos de texto a cualquier hora. </p>
                   <p>Es momento de recibir ofertas y promociones verdaderas, conocer marcas nuevas y ahorrar! </p>
                   <p>Muchas gracias por suscribirte<br>
                     <strong>El equipo de DealHunter</strong></p>
