--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -69,18 +69,17 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="20">
               <tr>
                 <td style="font-size: 14px; line-height:20px; color:#333;">
-                  <p>Hola <%= @user.email%>!</p>
-                  <p>Somos <strong style="color:#3253ff;">Dealhunter</strong>, una nueva forma de encontrar las mejores ofertas y promociones premium de tus marcas favoritas. </p>
-                  <p>Además, nuestro sistema es totalmente gratis, y se amolda a tu disponibilidad, asique preparate para disfrutar!.</p>
-                  <p>Con <strong style="color:#3253ff;">DealHunter</strong> hoy sos vos quien decide que publicidad te interesa. Se acabaron los llamados, los mensajes de texto y los correos de texto a cualquier hora. </p>
-                  <p>Es momento de recibir ofertas y promociones verdaderas, conocer marcas nuevas y ahorrar! </p>
+                  <p>Hola <%= @company.name%>!</p>
+                  <p>Somos <strong style="color:#3253ff;">Dealhunter</strong>, una nueva forma de publicar y divulgar las promociones y novedades de su empresa. </p>
+                  <p>Con <strong style="color:#3253ff;">DealHunter</strong> su cliente decide qué publicidades son de su interés, y se mantendrá informado sobre las novedades de su empresa en todo momento.</p>
+                  <p>Esto significa que sus clientes estarán listos para participar de sus ofertas siempre!</p>
                   <p>Muchas gracias por suscribirte<br>
                     <strong>El equipo de DealHunter</strong></p>
                 </td>
               </tr>
             </table>
           </td>
-          <td valign="top" width="270"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/laptop-suitcase.jpg" width="270" height="494"></td>
+          <td valign="top" width="270"><img src="http://dealhunterarg.herokuapp.com/assets/mailer.png" width="270" height="494"></td>
         </tr>
         <tr>
           <td colspan="2" valign="middle" align="center" height="21"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/divider.jpg" width="551" height="21"></td>
