--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container" id="main-content">
   <div class="row">
-    <section class="span8">
+    <section class="span8 rounded-borders light-shadowed" style="background: #ffffff;">
 
-      <header class="out">
+      <header class="out rounded-borders-btn">
         <h2>Información de Usuario</h2>
       </header>
 
@@ -46,8 +46,8 @@
                 </div><!--end wrapper-padding-->
               </div><!--end span4-->
 
-              <div class="span4">
-                <div class="wrapper-padding">
+              <div class="span4" style="background: none;">
+                <div class="wrapper-padding ">
 
                   <%=f.inputs :for => [:client, f.object.client || Client.new] do |h|%>
 
@@ -89,7 +89,7 @@
             <div class="wrapper-padding">
               <hr>
               <div class="text-center">
-                <button type="submit" class="btn btn-vontrip">Grabar Información</button>
+                <button type="submit" class="btn btn-vontrip rounded-borders-btn">Grabar Información</button>
               </div>
             </div><!--end wrapper-padding-->
           </div><!--end wrapper-->
@@ -100,24 +100,29 @@
     <!--end main content-->
 
     <!--sidebar-->
-    <aside class="span4">
+    <aside class="span4" style="background: none;">
 
-      <div class="wrapper-padding">
+      <div class="wrapper-padding rounded-borders light-shadowed" style="background: #ffffff;">
 
-        <h2>Detalle de Cuenta</h2>
+        <h2 class="rounded-borders-btn">Detalle de Cuenta</h2>
         <ul class="aside-nav">
           <li><a href="#">Mis Ofertas</a></li>
           <li><a href="#">Preferencias</a></li>
         </ul>
-        <h2>Información Personal</h2>
+        <h2 class="rounded-borders-btn">Información Personal</h2>
         <ul class="aside-nav">
           <li><a href="<%= edit_user_path(current_user)%>" class="active">Mi Perfil</a></li>
         </ul>
-        <h2>Preferencias</h2>
+        <h2 class="rounded-borders-btn">Preferencias</h2>
         <ul class="aside-nav">
           <li><a href="#">Contraseña</a></li>
         </ul>
       </div>
+      <!--<div id="bags">-->
+        <!--<div id="stage">-->
+          <!--<div id="block"></div>-->
+        <!--</div>-->
+      <!--</div>-->
     </aside><!--end sidebar-->
   </div><!--end container-->
 </div><!--end row-->
