--- a/app/views/new_user_mailer/new_client_email.html.erb
+++ b/app/views/new_user_mailer/new_client_email.html.erb
@@ -69,7 +69,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="20">
               <tr>
                 <td style="font-size: 14px; line-height:20px; color:#333;">
-                  <p>Hola <%= @user.email%>!</p>
+                  <p>Hola!</p>
                   <p>Somos <strong style="color:#3253ff;">Dealhunter</strong>, una nueva forma de encontrar las mejores ofertas y promociones premium de tus marcas favoritas. </p>
                   <p>Además, nuestro sistema es totalmente gratis, y se amolda a tu disponibilidad, asique preparate para disfrutar!.</p>
                   <p>Con <strong style="color:#3253ff;">DealHunter</strong> hoy sos vos quien decide qué publicidad te interesa. Se acabaron los llamados, los mensajes de texto y los correos de texto a cualquier hora. </p>
