--- a/app/views/new_user_mailer/new_client_email.html.erb
+++ b/app/views/new_user_mailer/new_client_email.html.erb
@@ -69,7 +69,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="20">
               <tr>
                 <td style="font-size: 14px; line-height:20px; color:#333;">
-                  <p>Hola!</p>
+                  <p>Hola<%= @user.email %> !</p>
                   <p>Somos <strong style="color:#3253ff;">Dealhunter</strong>, una nueva forma de encontrar las mejores ofertas y promociones premium de tus marcas favoritas. </p>
                   <p>Además, nuestro sistema es totalmente gratis, y se amolda a tu disponibilidad, asique preparate para disfrutar!.</p>
                   <p>Con <strong style="color:#3253ff;">DealHunter</strong> hoy sos vos quien decide qué publicidad te interesa. Se acabaron los llamados, los mensajes de texto y los correos de texto a cualquier hora. </p>
@@ -80,7 +80,7 @@
               </tr>
             </table>
           </td>
-          <td valign="top" width="270"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/laptop-suitcase.jpg" width="270" height="494"></td>
+          <td valign="top" width="270"><img src="https://dealhunterarg.herokuapp.com/assets/mailer.png" width="270" height="270" style="margin-top: 50px;"></td>
         </tr>
         <tr>
           <td colspan="2" valign="middle" align="center" height="21"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/divider.jpg" width="551" height="21"></td>
