--- a/app/views/new_user_mailer/new_user_email.html.erb
+++ b/app/views/new_user_mailer/new_user_email.html.erb
@@ -69,7 +69,7 @@
             <table width="100%" border="0" cellspacing="0" cellpadding="20">
               <tr>
                 <td style="font-size: 14px; line-height:20px; color:#333;">
-                  <p>Hola !</p>
+                  <p>Hola <%= @company.name %>!</p>
                   <p>Somos <strong style="color:#3253ff;">Dealhunter</strong>, una nueva forma de publicar y divulgar las promociones y novedades de su empresa. </p>
                   <p>Con <strong style="color:#3253ff;">DealHunter</strong> su cliente decide qué publicidades son de su interés, y se mantendrá informado sobre las novedades de su empresa en todo momento.</p>
                   <p>Esto significa que sus clientes estarán listos para participar de sus ofertas siempre!</p>
@@ -79,7 +79,7 @@
               </tr>
             </table>
           </td>
-          <td valign="top" width="270"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/laptop-suitcase.jpg" width="270" height="494"></td>
+          <td valign="top" width="270"><img src="https://dealhunterarg.herokuapp.com/assets/mailer.png" width="270" height="270" style="margin-top: 50px;"></td>
         </tr>
         <tr>
           <td colspan="2" valign="middle" align="center" height="21"><img src="https://s3-us-west-2.amazonaws.com/vontrip/img+html+mailer+app/divider.jpg" width="551" height="21"></td>
