change copy paste error from nested models

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -91,9 +91,11 @@
             </article>
 
             <% if !session[:flash].nil? %>
-                <div class="alert" id="login-alert">
-                  <%= session[:flash][:notice] %>
-                </div>
+                <% if !session[:flash][:notice].nil? %>
+                    <div class="alert" id="login-alert">
+                     <%= session[:flash][:notice] %>
+                    </div>
+                <% end %>
             <% end %>
 
             <div class="wrapper-padding">
