--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,9 +16,7 @@
               <div class="span4">
                 <div class="wrapper-padding">
 
-                  <% if @user.user_role_id == 2 %>
-
-                      <%=f.inputs :for => [:client, f.object.client || Client.new] do |h|%>
+                      <%=f.inputs :for => [:client, f.object.client] do |h|%>
 
                           <div class="control-group clearfix">
                             <label class="pull-left" for="inputEmail">Nombre</label>
@@ -56,7 +54,7 @@
                   <div class="span4">
                     <div class="wrapper-padding">
 
-                      <%=f.inputs :for => [:client, f.object.client || Client.new] do |h|%>
+                      <%=f.inputs :for => [:client, f.object.client] do |h|%>
 
                           <div class="control-group clearfix">
                             <label class="pull-left" for="inputApellido">Apellido</label>
@@ -83,8 +81,6 @@
                         <%= f.input :email, :label => false, :input_html => { :class => "pull-right input-medium", :placeholder => "Email", :id => "inputEmail"} %>
                       </div>
                   <%end%>
-
-                <%end%>
 
                 </div><!--end wrapper-padding-->
               </div><!--end span4-->
